Fix node preview bug for IE7 whereby text would overflow outside of the containing div if higher than 300px

--- a/sites/all/themes/ginkgo/forms.css
+++ b/sites/all/themes/ginkgo/forms.css
@@ -247,4 +247,5 @@ div.node-preview div.preview-content {
   padding:9px;
   height:300px;
   overflow:auto;
+  position: relative;
   }
